New match added

--- a/2025-12-06-augsburg-vs-leverkusen.html
+++ b/2025-12-06-augsburg-vs-leverkusen.html
@@ -181,7 +181,7 @@
             <div class="event-hero-content animate-fade-in">
                 <h1 class="event-title">Augsburg vs Leverkusen</h1>
                 <div class="event-meta-row">
-                    <span class="league-badge bundesliga">Bundesliga</span>
+                    <span class="league-badge others">Bundesliga</span>
                     <div class="match-meta-item">
                         <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
@@ -374,7 +374,7 @@ Expect a high-stakes clash with Leverkusen likely to dominate — but for Augsbu
                 All team names, logos, and trademarks are property of their respective owners.
             </p>
             <p style="margin-top: 1rem;">
-                For takedown requests or concerns, contact: <a href="mailto:copyright@footholics.in" style="color: var(--accent);">copyright@footholics.in</a>
+                For takedown requests or concerns, contact: <a href="mailto:footholicsin@gmail.com" style="color: var(--accent);">footholicsin@gmail.com</a>
             </p>
         </div>
     </main>
@@ -398,7 +398,7 @@ Expect a high-stakes clash with Leverkusen likely to dominate — but for Augsbu
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#" onclick="document.getElementById('heroSearch').focus(); scrollTo(0, 0); return false;">Search Matches</a></li>
                         <li><a href="/#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:contact@footholics.in">Contact</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
