--- a/2025-12-06-inter-miami-vs-vancouver.html
+++ b/2025-12-06-inter-miami-vs-vancouver.html
@@ -307,7 +307,7 @@ This will be a first-ever MLS Cup title opportunity for both clubs, with star po
                 All team names, logos, and trademarks are property of their respective owners.
             </p>
             <p style="margin-top: 1rem;">
-                For takedown requests or concerns, contact: <a href="mailto:copyright@footholics.in" style="color: var(--accent);">copyright@footholics.in</a>
+                For takedown requests or concerns, contact: <a href="mailto:footholicsin@gmail.com" style="color: var(--accent);">footholicsin@gmail.com</a>
             </p>
         </div>
     </main>
@@ -331,7 +331,7 @@ This will be a first-ever MLS Cup title opportunity for both clubs, with star po
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#" onclick="document.getElementById('heroSearch').focus(); scrollTo(0, 0); return false;">Search Matches</a></li>
                         <li><a href="/#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:contact@footholics.in">Contact</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
