--- a/TEMPLATE-event.html
+++ b/TEMPLATE-event.html
@@ -336,7 +336,7 @@
                 All team names, logos, and trademarks are property of their respective owners.
             </p>
             <p style="margin-top: 1rem;">
-                For takedown requests or concerns, contact: <a href="mailto:footholics.in@gmail.com" style="color: var(--accent);">footholics.in@gmail.com</a>
+                For takedown requests or concerns, contact: <a href="mailto:footholicsin@gmail.com" style="color: var(--accent);">footholicsin@gmail.com</a>
             </p>
         </div>
     </main>
@@ -360,7 +360,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="search.html">Search Matches</a></li>
                         <li><a href="#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:footholics.in@gmail.com">Contact</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
@@ -369,7 +369,7 @@
                     <ul class="footer-links">
                         <li><a href="privacy.html">Privacy Policy</a></li>
                         <li><a href="terms.html">Terms & Conditions</a></li>
-                        <li><a href="mailto:copyright@footholics.in">DMCA / Copyright</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">DMCA / Copyright</a></li>
                         <li><a href="disclaimer.html">Disclaimer</a></li>
                     </ul>
                 </div>
