--- a/index.html
+++ b/index.html
@@ -128,11 +128,14 @@
 
                                         <!-- Match Card -->
                                         <!-- Match Card -->
+                    
+
+                                        <!-- Match Card -->
                     <article class="glass-card match-card">
-                        <img src="assets/img/augsburg-leverkusen-poster.jpg" alt="Augsburg vs Leverkusen" class="match-poster" loading="lazy">
+                        <img src="assets/img/match-poster.jpg" alt="Augsburg vs Leverkusen" class="match-poster" loading="lazy">
                         <div class="match-header">
                             <h3 class="match-title">Augsburg vs Leverkusen</h3>
-                            <span class="league-badge bundesliga">Bundesliga</span>
+                            <span class="league-badge others">Bundesliga</span>
                         </div>
                         <div class="match-meta">
                             <div class="match-meta-item">
@@ -142,7 +145,7 @@
                                     <line x1="8" y1="2" x2="8" y2="6"></line>
                                     <line x1="3" y1="10" x2="21" y2="10"></line>
                                 </svg>
-                                <span>Dec 06, 2025</span>
+                                <span>December 06, 2025</span>
                             </div>
                             <div class="match-meta-item">
                                 <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
@@ -378,7 +381,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#" onclick="document.getElementById('heroSearch').focus(); scrollTo(0, 0); return false;">Search Matches</a></li>
                         <li><a href="#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:footholics.in@gmail.com">Contact</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
