--- a/terms.html
+++ b/terms.html
@@ -141,7 +141,7 @@
             <p>These terms are governed by applicable international laws. Disputes will be resolved in accordance with the jurisdiction of our registered location.</p>
 
             <h2>9. Contact</h2>
-            <p>For questions about these terms, contact: <a href="mailto:legal@footholics.in">legal@footholics.in</a></p>
+            <p>For questions about these terms, contact: <a href="mailto:footholicsin@gmail.com">footholicsin@gmail.com</a></p>
 
             <a href="index.html" class="back-btn">← Back to Home</a>
         </article>
