--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -302,7 +302,7 @@
                 All team names, logos, and trademarks are property of their respective owners.
             </p>
             <p style="margin-top: 1rem;">
-                For takedown requests or concerns, contact: <a href="mailto:footholics.in@gmail.com" style="color: var(--accent);">footholics.in@gmail.com</a>
+                For takedown requests or concerns, contact: <a href="mailto:footholicsin@gmail.com" style="color: var(--accent);">footholicsin@gmail.com</a>
             </p>
         </div>
     </main>
@@ -326,7 +326,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="#" onclick="document.getElementById('heroSearch').focus(); scrollTo(0, 0); return false;">Search Matches</a></li>
                         <li><a href="/#leagues">Browse Leagues</a></li>
-                        <li><a href="mailto:footholics.in@gmail.com">Contact</a></li>
+                        <li><a href="mailto:footholicsin@gmail.com">Contact</a></li>
                     </ul>
                 </div>
 
