New match added

--- a/p/3-live.html
+++ b/p/3-live.html
@@ -69,8 +69,12 @@
             <iframe
                 class="player-iframe"
                 src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=0&controls=1&rel=0&modestbranding=1"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen; camera; microphone; geolocation"
                 allowfullscreen
+                sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+                referrerpolicy="no-referrer"
+                scrolling="no"
+                frameborder="0"
                 title="Live Stream Player 3"
             ></iframe>
 
