New match added

--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
 
                                         <!-- Match Card -->
                     <article class="glass-card match-card">
-                        <img src="assets/img/match-poster.jpg" alt="Augsburg vs Leverkusen" class="match-poster" loading="lazy">
+                        <img src="assets/img/augsburg-leverkusen-poster.jpg" alt="Augsburg vs Leverkusen" class="match-poster" loading="lazy">
                         <div class="match-header">
                             <h3 class="match-title">Augsburg vs Leverkusen</h3>
-                            <span class="league-badge others">Bundesliga</span>
+                            <span class="league-badge bundesliga">Bundesliga</span>
                         </div>
                         <div class="match-meta">
                             <div class="match-meta-item">
