--- a/p/1-live.html
+++ b/p/1-live.html
@@ -71,7 +71,7 @@
                 src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&mute=0&controls=1&rel=0&modestbranding=1"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen; camera; microphone; geolocation"
                 allowfullscreen
-                sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation"
+                sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-popups-to-escape-sandbox allow-presentation allow-top-navigation allow-modals allow-orientation-lock allow-pointer-lock"
                 referrerpolicy="no-referrer"
                 scrolling="no"
                 frameborder="0"
