New match added

--- a/2025-12-06-inter-miami-vs-vancouver.html
+++ b/2025-12-06-inter-miami-vs-vancouver.html
@@ -156,8 +156,7 @@
 
         <!-- Match Preview -->
         <section class="glass-card mb-4">
-            <h2 style="color: var(--accent); margin-bottom: 1rem;">Match Preview</h2>
-            <p>2025 MLS Cup Final — Inter Miami CF vs Vancouver Whitecaps FC is set for Saturday, December 6, 2025 at Chase Stadium, Fort Lauderdale, kickoff at 2:30 p.m. ET. 
+            P25 MLS Cup Final — Inter Miami CF vs Vancouver Whitecaps FC is set for Saturday, December 6, 2025 at Chase Stadium, Fort Lauderdale, kickoff at 2:30 p.m. ET. 
 
 This will be a first-ever MLS Cup title opportunity for both clubs, with star power — from Lionel Messi in Miami to Thomas Müller in Vancouver — promising a dramatic, high-stakes showdown.</p>
         </section>
