--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/main.css">
 
@@ -446,13 +449,13 @@ It'...</p>
                     <h4>Connect With Us</h4>
                     <ul class="footer-links">
                         <li><a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">WhatsApp Channel
+                            <i class="fa-brands fa-whatsapp" style="font-size: 18px; margin-right: 8px;"></i>WhatsApp Channel
                         </a></li>
                         <li><a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/telegram.png" alt="Telegram" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Telegram
+                            <i class="fa-brands fa-telegram" style="font-size: 18px; margin-right: 8px;"></i>Telegram
                         </a></li>
                         <li><a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer">
-                            <img src="assets/img/logos/site/discord.png" alt="Discord" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none';">Discord
+                            <i class="fa-brands fa-discord" style="font-size: 18px; margin-right: 8px;"></i>Discord
                         </a></li>
                     </ul>
                 </div>
