--- a/index.html
+++ b/index.html
@@ -136,6 +136,50 @@
                                         <!-- Match Card -->
                                         <!-- Match Card -->
                     <!-- Match Card -->
+                                        <!-- Match Card -->
+                    <article class="glass-card match-card">
+                        <img src="assets/img/real-madrid-celta-vigo-poster.jpg" alt="Real Madrid vs Celta Vigo" class="match-poster" loading="lazy">
+                        <div class="match-header">
+                            <h3 class="match-title">Real Madrid vs Celta Vigo</h3>
+                            <span class="league-badge laliga">La Liga</span>
+                        </div>
+                        <div class="match-meta">
+                            <div class="match-meta-item">
+                                <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
+                                    <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                                    <line x1="16" y1="2" x2="16" y2="6"></line>
+                                    <line x1="8" y1="2" x2="8" y2="6"></line>
+                                    <line x1="3" y1="10" x2="21" y2="10"></line>
+                                </svg>
+                                <span>Dec 07, 2025</span>
+                            </div>
+                            <div class="match-meta-item">
+                                <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
+                                    <circle cx="12" cy="12" r="10"></circle>
+                                    <polyline points="12 6 12 12 16 14"></polyline>
+                                </svg>
+                                <span>20:00 GMT</span>
+                            </div>
+                            <div class="match-meta-item">
+                                <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
+                                    <circle cx="12" cy="10" r="3"></circle>
+                                </svg>
+                                <span>Estadio Bernabeu</span>
+                            </div>
+                        </div>
+                        <p class="match-excerpt">Real Madrid vs Celta Vigo — set for Sunday, 7 December 2025 at Santiago Bernabéu Stadium (Madrid).
+
+Real Madrid — second...</p>
+                        <a href="2025-12-07-real-madrid-vs-celta-vigo.html" class="match-link">
+                            Read More & Watch Live
+                            <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
+                                <line x1="5" y1="12" x2="19" y2="12"></line>
+                                <polyline points="12 5 19 12 12 19"></polyline>
+                            </svg>
+                        </a>
+                    </article>
+
                     <article class="glass-card match-card">
                         <img src="assets/img/real-betis-barcelona-poster.jpg" alt="Real betis vs Barcelona" class="match-poster" loading="lazy">
                         <div class="match-header">
