Update Real Madrid vs Celta Vigo

--- a/2025-12-07-real-madrid-vs-celta-vigo.html
+++ b/2025-12-07-real-madrid-vs-celta-vigo.html
@@ -184,7 +184,7 @@
             <div class="event-hero-content animate-fade-in">
                 <h1 class="event-title">Real Madrid vs Celta Vigo</h1>
                 <div class="event-meta-row">
-                    <span class="league-badge laliga">La Liga</span>
+                    <span class="league-badge others">La Liga</span>
                     <div class="match-meta-item">
                         <svg width="20" height="20" fill="none" stroke="currentColor" stroke-width="2">
                             <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
