--- a/index.html
+++ b/index.html
@@ -137,11 +137,14 @@
                                         <!-- Match Card -->
                     <!-- Match Card -->
                                         <!-- Match Card -->
+                    
+
+                                        <!-- Match Card -->
                     <article class="glass-card match-card">
                         <img src="assets/img/real-madrid-celta-vigo-poster.jpg" alt="Real Madrid vs Celta Vigo" class="match-poster" loading="lazy">
                         <div class="match-header">
                             <h3 class="match-title">Real Madrid vs Celta Vigo</h3>
-                            <span class="league-badge laliga">La Liga</span>
+                            <span class="league-badge others">La Liga</span>
                         </div>
                         <div class="match-meta">
                             <div class="match-meta-item">
@@ -151,7 +154,7 @@
                                     <line x1="8" y1="2" x2="8" y2="6"></line>
                                     <line x1="3" y1="10" x2="21" y2="10"></line>
                                 </svg>
-                                <span>Dec 07, 2025</span>
+                                <span>December 07, 2025</span>
                             </div>
                             <div class="match-meta-item">
                                 <svg width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
