--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                     
 
                                         <!-- Match Card -->
+                    
+
+                                        <!-- Match Card -->
                     <article class="glass-card match-card">
                         <img src="assets/img/real-madrid-celta-vigo-poster.jpg" alt="Real Madrid vs Celta Vigo" class="match-poster" loading="lazy">
                         <div class="match-header">
