--- a/2025-12-06-augsburg-vs-leverkusen.html
+++ b/2025-12-06-augsburg-vs-leverkusen.html
@@ -309,6 +309,10 @@ Expect a high-stakes clash with Leverkusen likely to dominate — but for Augsbu
                 </a>
 
                 <a href="p/3-live.html?match=augsburg-vs-leverkusen" class="stream-link-card">
+                    <span class="live-badge">
+                        <span class="live-dot"></span>
+                        LIVE
+                    </span>
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
