--- a/2025-12-06-inter-miami-vs-vancouver.html
+++ b/2025-12-06-inter-miami-vs-vancouver.html
@@ -241,6 +241,10 @@ This will be a first-ever MLS Cup title opportunity for both clubs, with star po
                 </a>
 
                 <a href="p/3-live.html?match=inter-miami-vs-vancouver" class="stream-link-card">
+                    <span class="live-badge">
+                        <span class="live-dot"></span>
+                        LIVE
+                    </span>
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
