--- a/2025-12-06-real-betis-vs-barcelona.html
+++ b/2025-12-06-real-betis-vs-barcelona.html
@@ -310,6 +310,10 @@ It’s a big La Liga clash: the home side Real Betis sits 5th and arrives in goo
                 </a>
 
                 <a href="p/3-live.html?match=real-betis-vs-barcelona" class="stream-link-card">
+                    <span class="live-badge">
+                        <span class="live-dot"></span>
+                        LIVE
+                    </span>
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
