--- a/2025-12-07-real-madrid-vs-celta-vigo.html
+++ b/2025-12-07-real-madrid-vs-celta-vigo.html
@@ -312,6 +312,10 @@ Expect a fast, attacking game, with Real Madrid heavy favourites but Celta hopin
                 </a>
 
                 <a href="p/3-live.html?match=real-madrid-vs-celta-vigo" class="stream-link-card">
+                    <span class="live-badge">
+                        <span class="live-dot"></span>
+                        LIVE
+                    </span>
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
