--- a/p/1-live.html
+++ b/p/1-live.html
@@ -14,6 +14,9 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../assets/css/main.css">
 
@@ -117,13 +120,13 @@
             <p class="text-muted mb-3">Get updates on new streams and match alerts:</p>
             <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                 <a href="https://chat.whatsapp.com/KG7DBpC0BKv6bFtlzfOr2T" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    <img src="../assets/img/logos/site/whatsapp.png" alt="WhatsApp" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">📱</span> WhatsApp Channel
+                    <i class="fa-brands fa-whatsapp" style="font-size: 20px; margin-right: 8px;"></i> WhatsApp Channel
                 </a>
                 <a href="https://t.me/+XyKdBR9chQpjM2I9" target="_blank" rel="noopener noreferrer" class="btn btn-primary">
-                    <img src="../assets/img/logos/site/telegram.png" alt="Telegram" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">✈️</span> Telegram Channel
+                    <i class="fa-brands fa-telegram" style="font-size: 20px; margin-right: 8px;"></i> Telegram Channel
                 </a>
                 <a href="https://discord.gg/example" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">
-                    <img src="../assets/img/logos/site/discord.png" alt="Discord" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 6px;" onerror="this.style.display='none'; this.nextElementSibling.style.display='inline';"><span style="display:none;">💬</span> Discord Server
+                    <i class="fa-brands fa-discord" style="font-size: 20px; margin-right: 8px;"></i> Discord Server
                 </a>
             </div>
         </div>
