--- a/2025-12-10-real-madrid-vs-manchester-city.html
+++ b/2025-12-10-real-madrid-vs-manchester-city.html
@@ -237,6 +237,10 @@
                 </a>
 
                 <a href="p/3-live.html?match=real-madrid-vs-manchester-city" class="stream-link-card" onclick="return handleAdClick(this);">
+                    <span class="live-badge">
+                        <span class="live-dot"></span>
+                        LIVE
+                    </span>
                     <span class="stream-link-label">LINK 3</span>
                     <div class="stream-badges">
                         <span class="quality-badge sd">SD</span>
